--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
 
-	<h1>我的第一个 Web 页面</h1>
+	<h1>hello</h1>
 	<p id="demo">一个段落。</p>
 	<button type="button" onclick="myFunction()">点击这里</button>
 	<script>
